correct -no_rtti

--- a/cmake/teensy.cmake.in
+++ b/cmake/teensy.cmake.in
@@ -38,9 +38,19 @@ set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
 # Additional C and CPP files for Arduino support
 #
 #message(STATUS "PROJECT_NAME: ${PROJECT_NAME}")
+set(CPP_COMPILE_FLAGS "-felide-constructors -std=gnu++0x")
+set(C_COMPILE_FLAGS "-nostdlib")
 
 file(GLOB_RECURSE TEENSY_C_FILES ABSOLUTE ${COREPATH}**.c)
+foreach(SOURCE_C ${TEENSY_C_FILES})
+    set_source_files_properties(${SOURCE_C} PROPERTIES COMPILE_FLAGS "${C_COMPILE_FLAGS}")
+endforeach(SOURCE_C ${SOURCES_C})
+
 file(GLOB_RECURSE TEENSY_CPP_FILES ${COREPATH}**.cpp)
+foreach(SOURCE_CPP ${TEENSY_CPP_FILES})
+    set_source_files_properties(${SOURCE_CPP} PROPERTIES COMPILE_FLAGS "${CPP_COMPILE_FLAGS}")
+endforeach(SOURCE_CPP ${SOURCES_CPP})
+
 set(TEENSY_SOURCES ${TEENSY_C_FILES} ${TEENSY_CPP_FILES})
 #message(STATUS "Teensy cores sources: ${TEENSY_SOURCES}")
 #message(STATUS "COREPATH: ${COREPATH}")
@@ -80,7 +90,7 @@ function(teensy_add_executable TARGET)
     #message("mm ${ELFTARGET} ${ARGN} ${TEENSY_SOURCES} ${TEENSY_LIB_SOURCES}")
     add_executable(${ELFTARGET} ${ARGN} ${TEENSY_SOURCES} ${TEENSY_LIB_SOURCES})
 
-    set_target_properties(${ELFTARGET} PROPERTIES COMPILE_FLAGS "-Wall -g -Os -mcpu=${CPU} -mthumb -MMD -fno-exceptions")
+    set_target_properties(${ELFTARGET} PROPERTIES COMPILE_FLAGS "-Wall -g -Os -mcpu=${CPU} -mthumb -MMD -fno-exceptions -fno-rtti")
     set_target_properties(${ELFTARGET} PROPERTIES COMPILE_DEFINITIONS "${TEENSY_DEFINITIONS} ${INCLUDE_DIRECTORIES} -D__arm__ ")
     set_target_properties(${ELFTARGET} PROPERTIES INCLUDE_DIRECTORIES "${COREPATH}")
     set_target_properties(${ELFTARGET} PROPERTIES LINK_FLAGS "-O -Wl,--gc-sections,--defsym=__rtc_localtime=0 --specs=nano.specs -mcpu=${CPU} -mthumb -T${LINKER_FILE}")
@@ -118,14 +128,14 @@ macro(import_arduino_library_absolute LIB_DIR)
     file(GLOB SOURCES_CPP ABSOLUTE "${LIB_DIR}/*.cpp")
     foreach(SOURCE_CPP ${SOURCES_CPP})
         set(TEENSY_LIB_SOURCES ${TEENSY_LIB_SOURCES} ${SOURCE_CPP})
-        set_source_files_properties(${SOURCE_CPP} PROPERTIES COMPILE_FLAGS "-felide-constructors -fno-rtti -std=gnu++0x")
+        set_source_files_properties(${SOURCE_CPP} PROPERTIES COMPILE_FLAGS "${CPP_COMPILE_FLAGS}")
         #message("SOURCE_CPP ${SOURCE_CPP}")
     endforeach(SOURCE_CPP ${SOURCES_CPP})
 
     file(GLOB SOURCES_C ABSOLUTE "${LIB_DIR}/*.c")
     foreach(SOURCE_C ${SOURCES_C})
         set(TEENSY_LIB_SOURCES ${TEENSY_LIB_SOURCES} ${SOURCE_C})
-        set_source_files_properties(${SOURCE_C} PROPERTIES COMPILE_FLAGS "-nostdlib")
+        set_source_files_properties(${SOURCE_C} PROPERTIES COMPILE_FLAGS "${C_COMPILE_FLAGS}")
         #message("SOURCE_C ${SOURCE_C}")
     endforeach(SOURCE_C ${SOURCES_C})
 
