--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(LIB_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/lib/teensy_cmake_macros )
 
 include(CMakePackageConfigHelpers)
-configure_package_config_file(cmake/teensy.cmake.in
+configure_package_config_file(cmake/teensy.cmake
 		${CMAKE_CURRENT_BINARY_DIR}/teensy_cmake_macrosConfig.cmake
 		INSTALL_DESTINATION ${LIB_INSTALL_DIR}/teensy_cmake_macros/cmake
 		PATH_VARS)
@@ -18,6 +18,7 @@ write_basic_package_version_file(
 		COMPATIBILITY SameMajorVersion )
 
 install(FILES
+		${CMAKE_CURRENT_SOURCE_DIR}/cmake/teensy.cmake
 		${CMAKE_CURRENT_BINARY_DIR}/teensy_cmake_macrosConfig.cmake
 		${CMAKE_CURRENT_BINARY_DIR}/teensy_cmake_macrosConfigVersion.cmake
 		${CMAKE_CURRENT_SOURCE_DIR}/cmake/uninstall.cmake
