--- a/.github/workflows/basic-test.yml
+++ b/.github/workflows/basic-test.yml
@@ -1,4 +1,4 @@
-name: teensy-cmake-test
+name: basic-test
 on:
   push:
     paths:
@@ -33,4 +33,4 @@ jobs:
         run: mkdir cmake-build-debug && cd cmake-build-debug && cmake -DCMAKE_BUILD_TYPE=Debug .. && sudo make install
 
       - name: build
-        run: cd test && mkdir cmake-build-debug && cd cmake-build-debug && cmake -DCMAKE_BUILD_TYPE=Debug .. && make
+        run: run: cd tests/basic && mkdir cmake-build-debug && cd cmake-build-debug && cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_TOOLCHAIN_FILE:FILEPATH=../teensy41.toolchain.cmake .. && make
