--- a/.github/workflows/basic-test.yml
+++ b/.github/workflows/basic-test.yml
@@ -33,4 +33,4 @@ jobs:
         run: mkdir cmake-build-debug && cd cmake-build-debug && cmake -DCMAKE_BUILD_TYPE=Debug .. && sudo make install
 
       - name: build
-        run: run: cd tests/basic && mkdir cmake-build-debug && cd cmake-build-debug && cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_TOOLCHAIN_FILE:FILEPATH=../teensy41.toolchain.cmake .. && make
+        run: cd tests/basic && mkdir cmake-build-debug && cd cmake-build-debug && cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_TOOLCHAIN_FILE:FILEPATH=../teensy41.toolchain.cmake .. && make
