--- a/.github/workflows/audio-test.yml
+++ b/.github/workflows/audio-test.yml
@@ -20,6 +20,47 @@ jobs:
           fetch-depth: 1
           ref: master
 
+      - uses: actions/checkout@v2
+        with:
+          repository: PaulStoffregen/Audio.git
+          path: deps/Audio
+          fetch-depth: 1
+          ref: master
+
+      - uses: actions/checkout@v2
+        with:
+          repository: PaulStoffregen/SD.git
+          path: deps/SD
+          fetch-depth: 1
+          ref: Juse_Use_SdFat
+
+      - uses: actions/checkout@v2
+        with:
+          repository: PaulStoffregen/Wire.git
+          path: deps/Wire
+          fetch-depth: 1
+          ref: master
+
+      - uses: actions/checkout@v2
+        with:
+          repository: PaulStoffregen/SPI.git
+          path: deps/SPI
+          fetch-depth: 1
+          ref: master
+
+      - uses: actions/checkout@v2
+        with:
+          repository: PaulStoffregen/SerialFlash.git
+          path: deps/SerialFlash
+          fetch-depth: 1
+          ref: master
+
+      - uses: actions/checkout@v2
+        with:
+          repository: PaulStoffregen/arm_math.git
+          path: deps/arm_math
+          ref: master
+
       - name: download toolchain
         run: |
           curl  -L "https://developer.arm.com/-/media/Files/downloads/gnu-rm/9-2019q4/RC2.1/gcc-arm-none-eabi-9-2019-q4-major-x86_64-linux.tar.bz2" --output /tmp/gcc-arm-none-eabi.tar.bz2
