--- a/tests/eeprom/CMakeLists.txt
+++ b/tests/eeprom/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(test_teensy_eeprom)
-import_arduino_library(cores ${DEPSPATH}/cores/teensy4 avr util)
+import_arduino_library(cores ${DEPSPATH}/cores/teensy4 util)
 import_arduino_library(EEPROM ${DEPSPATH}/EEPROM)
 teensy_add_executable(eepromapp eepromapp.cpp)
 teensy_target_link_libraries(eepromapp EEPROM cores)
