--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,24 +37,6 @@ function(teensy_set_dynamic_properties)
     if (NOT DEFINED teensy_set_dynamic_properties_has_executed)
         set(teensy_set_dynamic_properties_has_executed 1 CACHE INTERNAL "teensy_set_dynamic_properties_has_executed")
         message(STATUS "teensy_set_dynamic_properties()")
-        
-        message(CHECK_START "identify root dependency path")
-        if (NOT DEFINED DEPSPATH)
-            message(FATAL_ERROR "DEPSPATH is UNDEFINED")
-        else()
-            message(STATUS "DEPSPATH: ${DEPSPATH}")    
-        endif()
-        message(CHECK_PASS "identified")
-
-
-
-        if (NOT DEFINED COREPATH)
-            set(COREPATH "${DEPSPATH}/cores/teensy4/")
-            set(COREPATH ${COREPATH} CACHE INTERNAL "COREPATH")
-            message(STATUS "COREPATH: ${COREPATH}")
-        else()
-            message(STATUS "COREPATH: ${COREPATH}")    
-        endif()
 
         if (NOT DEFINED CPU_CORE_SPEED)
             message(FATAL_ERROR "CPU_CORE_SPEED is UNDEFINED")
@@ -104,7 +86,7 @@ function(teensy_set_dynamic_properties)
         elseif(TEENSY_VERSION EQUAL 41)
             message(STATUS "building for teensy 4.1")
             set(CPU_DEFINE __IMXRT1062__)
-            set(LINKER_FILE ${COREPATH}imxrt1062_t41.ld)
+            set(LINKER_FILE ${teensy_cores_SOURCE_DIR}/teensy4/imxrt1062_t41.ld)
             set(build_board TEENSY41)
             set(build_flags_ld " -Wl,--gc-sections,--relax ")
             set(build_core teensy4)
@@ -258,7 +240,9 @@ function(teensy_add_library TARGET)
     endforeach(SOURCE_S ${SOURCES_S})
 
     add_library(${ELFTARGET} STATIC ${ARGN} ${TEENSY_SOURCES} ${TEENSY_LIB_CPP_SOURCES} ${TEENSY_LIB_C_SOURCES} ${TEENSY_LIB_S_SOURCES})
-    set_target_properties(${ELFTARGET} PROPERTIES INCLUDE_DIRECTORIES ${COREPATH})
+    if (COREPATH)
+        set_target_properties(${ELFTARGET} PROPERTIES INCLUDE_DIRECTORIES ${COREPATH})
+    endif ()
     set_target_properties(${ELFTARGET} PROPERTIES LINK_FLAGS "${LINK_FLAGS}")
 
     add_custom_command(OUTPUT ${TARGET}.hex 
