--- a/tests/spi/CMakeLists.txt
+++ b/tests/spi/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
-project(test_teensy_spi)
-import_arduino_library(cores ${DEPSPATH}/cores/teensy4 util)
-import_arduino_library(SPI ${DEPSPATH}/SPI)
+project(test_teensy_eeprom)
+include(${teensy_cmake_macros_SOURCE_DIR}/CMakeLists.include.txt)
+import_arduino_library(cores ${teensy_cores_SOURCE_DIR}/teensy4 avr util)
+import_arduino_library_git(SPI https://github.com/PaulStoffregen/SPI master "")
 teensy_add_executable(spiapp spiapp.cpp)
 teensy_target_link_libraries(spiapp SPI cores)
