--- a/.github/workflows/eeprom-test.yml
+++ b/.github/workflows/eeprom-test.yml
@@ -23,4 +23,4 @@ jobs:
           echo "/opt/gcc-arm-none-eabi-9-2019-q4-major/bin"
 
       - name: build
-        run: cd tests/eeprom && mkdir cmake-build-debug && cd cmake-build-debug && cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_TOOLCHAIN_FILE:FILEPATH=../teensy41.toolchain.cmake .. && make
+        run: cd tests/eeprom && mkdir cmake-build-debug && cd cmake-build-debug && cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_TOOLCHAIN_FILE:FILEPATH=../teensy41.toolchain.cmake -Wno-dev .. && make
